# ai_developer

./: .gitignore  README.md  pyproject.toml
.ai_dev/: config.yaml
.ai_dev/agents/: analysis_project.md
.ai_dev/mcp/: mcp.json  mcp_example.json
ai_dev/: __init__.py  cli.py
ai_dev/cli/: advanced_cli.py
ai_dev/commands/: __init__.py  agents.py  clear.py  help.py
ai_dev/components/: choice_window.py  common_window.py  input_window.py  output_capture.py  output_window.py  scrollable_formatted_text_control.py
ai_dev/constants/: product.py  prompt.py  prompt_cn.py
ai_dev/core/: assistant.py  config_manager.py  event_manager.py  global_state.py  interruption_manager.py  re_act_agent.py
ai_dev/examples/: scrollable_control_example.py
ai_dev/models/: model_manager.py  state.py
ai_dev/permission/: permission_manager.py  permission_ui.py
ai_dev/tools/: __init__.py  base.py  bash_exec.py  file_edit.py  file_list.py  file_read.py  file_write.py  glob.py  grep.py  task_tool.py  todo_write.py
ai_dev/tools/bash/: bash_exec.py  prompt.py  prompt_cn.py
ai_dev/tools/file_edit/: file_edit.py  prompt.py  prompt_cn.py
ai_dev/tools/file_list/: file_list.py  (+2 more)
ai_dev/utils/: __init__.py  bash_executor.py  collection.py  compact.py  env.py  error_monitor.py  error_recovery.py  exception_handler.py  exec_file.py  file.py  freshness.py  git.py  logger.py  mcp.py  message.py  patch.py  reminder.py  render.py  stream_processor.py  subagent.py  todo.py  tool.py
test/tools/: test_file_list_tool.py  test_glob_tool.py  test_grep_tool.py
test/utils/: test_freshness.py
(+20 files in other folders)
