[project]
name = "ai-programming-assistant"
version = "0.1.0"
description = "AI Programming Assistant Agent built with LangChain and LangGraph"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-deepseek>=1.0.0",
    "pydantic>=2.6.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "openai>=1.30.1",
    "httpx[socks]>=0.28.1",
    "python-frontmatter>=1.1.0",
    "async-lru>=2.0.5",
    "chardet>=5.2.0",
    "prompt_toolkit>=3.0.52",
    "watchdog>=6.0.0",
]

[project.scripts]
ai-dev = "ai_dev.cli.advanced_cli:main"

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]